Fixing linting errors and warnings